--- a/data/css/index.css
+++ b/data/css/index.css
@@ -69,23 +69,22 @@ h3{
     color: white ;
     text-align: center;
 }
-.planetas{
+#planet{
  display: flex;
  justify-content: center;
  transition: all 2s;
 } 
-.Nombre_planeta{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
 img{
     display: block;
     border-radius: 100%;
 }
-.Nombre_planeta{
+#name_planet{
     color: white;
     text-align: center ;
     padding: 2%;
     font-size: 200%;
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 .botones{
     display: grid;
