--- a/data/css/index.css
+++ b/data/css/index.css
@@ -37,8 +37,23 @@
         }
 /* -----------code ------------------*/
 
-body{
-    background-color: black;
+body {
+    background:black;
+    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center center; /* Centra la imagen en el fondo */
+    background-attachment: fixed; /* Fija la imagen de fondo mientras se desplaza la página */
+    /* Puedes ajustar estos valores según tus preferencias */
+    transition:all 9s;
+    animation: fadeIn 9s ease-in-out forwards;
+}
+@keyframes fadeIn {
+    0% {
+        background: black;
+    }
+    100% {
+        background-image: url('../img/fondo.jpg'); /* Nueva imagen de fondo */
+    }
 }
 /*Main*/
 h1 {
@@ -65,7 +80,7 @@ img{
     text-align: center ;
     padding: 2%;
     font-size: 200%;
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 .botones{
