--- a/data/css/index.css
+++ b/data/css/index.css
@@ -16,6 +16,31 @@
     width:100%;
     font-size:2rem;
 }
+.loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Asegura que el loader esté por encima de otros elementos */
+}
+
+.loader {
+    border: 8px solid #f3f3f3; /* Gris claro */
+    border-top: 8px solid #3498db; /* Azul */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite; /* Animación de rotación */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 .imgLoad{
     margin-top:2%;
     margin-left:8%;
@@ -44,6 +69,7 @@ body {
     background-attachment: fixed; /* Fija la imagen de fondo mientras se desplaza la página */
     transition:all 9s;
     animation: fadeIn 9s ease-in-out forwards;
+    margin:0;
 }
 @keyframes fadeIn {
     0% {
@@ -58,11 +84,6 @@ h1 {
     font-size: 250%;
     color: white ;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-h3{
-    font-size: 100%;
-    color: white ;
-    text-align: center;
 }
 #planet{
  display: flex;
@@ -139,4 +160,14 @@ img{
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.5rem;
 }
-/*media keris*/
+/*Main*/
+main{
+    background-color:black;
+    display:flex;
+    width:100%;
+    margin: 0;
+    color:white;
+.gif{
+    width:300px;
+    height:300px;
+}
