--- a/data/css/index.css
+++ b/data/css/index.css
@@ -1,5 +1,4 @@
 /* -----------code ------------------*/
-
 body {
     background:black;
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
@@ -28,6 +27,9 @@ body {
     transition: all 1s;
     background-color: black;
     color:white;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .loader-wrapper {
     position: fixed;
@@ -56,12 +58,10 @@ body {
 }
 /*ovni arriba del loade*/
 .imgLoad{
-    margin-top:4%;
-    margin-left:47%;
+    top: 0;
     width:100px;
     height:100px;
-    position: absolute;
-    top: 0;
+    position: fixed;
     transform: translateX(-5%);
     animation: animacionDescenso 1s linear infinite;
 }
@@ -70,7 +70,7 @@ body {
         top: 0;
     }
     50% {
-        top: calc(5% - 10px); /* Ajusta el valor según la altura de la imagen */
+        top: calc(15% - 10px); /* Ajusta el valor según la altura de la imagen */
     }
 }
 /*Toas*/
@@ -154,7 +154,6 @@ h1 {
 }
 .calcular:hover{
     background-color: rgb(0, 196, 59);
-    color: blue;
     transition: all 1s;
     font-size: 150%;
 }
@@ -173,7 +172,6 @@ main{
     width:100%;
     margin:2;
     color:white;
-    display:center;
 }
 .divOvnis{
      flex-grow:1;
@@ -189,23 +187,22 @@ main{
     height: 320px;
 }
 /*Nav*/
-ul{
+main ul{
     margin-top:2%;
     list-style-type: none;
-     text-align: center;
+    text-align: center;
 }
-li{ 
-    display:inline-block;
+main ul > li{ 
+    display:inline;
     margin:1%;
 }
-li  a{
-    display:block;
+main ul > li  a{
     text-decoration: none;
     color:white;
     transition:all 1s;
     font-size:1.5rem;
 }
-li a:hover {
+main ul > li a:hover {
     transition:all 1s;
     color:blue;
 }
@@ -213,19 +210,90 @@ li a:hover {
 .info-alien{
     margin:2%;
     flex-grow:1;
-    width:300px;
+    width:400px;
 }
-.info-alien h2,p{
+.info-alien h2,h3,p{
     font-family: 'Kanit', sans-serif;
 }
-/*btn of generation info*/
-.new-date{
-    padding:2%;
-    font-size:1rem;
-    font-weight: 600; 
-    color:white;
-    background-color:green;  
-    border:none;
-    border-radius:10px 10px 10px 10px;
+
+/*Section planetas*/
+#Planetas{
+    display:flex;
+    flex-wrap:wrap;
+    width:100%;
+    justify-content:center;
 }
+.arPlaneta{
+    padding:2%;
+    flex-grow:1;
+    width:400px;
+}
+.cont-planet{   
+    flex-grow:1;
+    justify-content: center;
+    text-align: center;
+    width:200px;/*minimo*/
+    margin-top:-5%;
+    padding:2%;
+}
+.cont-planet img{ 
+    width: 200px;
+    height: 280px;
+}
+/*footer*/
+footer{
+    padding:2%;
+    background-color:white;
+    color:black;
+}
+/*Redes*/
+/*Las img resultaron de distintas alturas asique mi en la obligacion de tocarlo por separado */
+#icono{
+    width:3%;
+    height:3%;
+}
+footer ul { 
+    list-style-type: none;
+    text-align: center;
+}
+footer ul > li { 
+    display:inline;
+    margin:1%;
+}
+/*agradecimiento y dedicatórias*/
+h4{
+    text-align:center;
+}
+
+footer p {
+    font-family: 'Inconsolata', monospace;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
